--- a/app/views/partials/category-menu.html
+++ b/app/views/partials/category-menu.html
@@ -4,16 +4,26 @@
 	<section class="category-menu">
 		<div class="carousel">
 			<div class="thick-menu">
-				<a href="#" class="thick-menu__item">Womens</a>
-				<a href="#" class="thick-menu__item">Mens</a>
-				<a href="#" class="thick-menu__item">Art</a>
-				<a href="#" class="thick-menu__item">Home</a>
-				<a href="#" class="thick-menu__item">Kids</a>
-				<a href="#" class="thick-menu__item">Womens</a>
-				<a href="#" class="thick-menu__item">Mens</a>
-				<a href="#" class="thick-menu__item">Art</a>
-				<a href="#" class="thick-menu__item">Home</a>
-				<a href="#" class="thick-menu__item">Kids</a>
+				{% if path == 'works' || path == 'users' %}
+					<a href="#" class="thick-menu__item">Arte Urbano</a>
+					<a href="#" class="thick-menu__item">Collage</a>
+					<a href="#" class="thick-menu__item">Dibujo</a>
+					<a href="#" class="thick-menu__item">Ilustracion</a>
+					<a href="#" class="thick-menu__item">Pintura</a>
+					<a href="#" class="thick-menu__item">Arte digital</a>
+					<a href="#" class="thick-menu__item">Fotografia</a>
+					<a href="#" class="thick-menu__item">Escultura</a>
+					<a href="#" class="thick-menu__item">Ilustracion</a>
+					<a href="#" class="thick-menu__item">Tecnica Mixta</a>
+					<a href="#" class="thick-menu__item">Grabado</a>
+				{% endif %}
+				{% if path == 'products' || path == 'index' || path == 'login' %}
+					<a href="#" class="thick-menu__item">Obras Originales</a>
+					<a href="#" class="thick-menu__item">Polos</a>
+					<a href="#" class="thick-menu__item">Tazas</a>
+					<a href="#" class="thick-menu__item">Iphone Cases</a>
+					<a href="#" class="thick-menu__item">Prints</a>
+				{% endif %}
 			</div>
 		</div>
 	</section>
