--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -91,3 +91,4 @@
 @import 'objects/login.styl'
 @import 'objects/navigation.styl'
 @import 'objects/category-menu.styl'
+@import 'objects/section-title.styl'
