--- a/public/stylus/discover-works.styl
+++ b/public/stylus/discover-works.styl
@@ -107,3 +107,4 @@
 @import 'objects/filters.styl'
 @import 'objects/navigation.styl'
 @import 'objects/category-menu.styl'
+@import 'objects/section-title.styl'
