--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -151,10 +151,21 @@
 
 
 /*------------------------------------*
-	$ NAVIGATION TEXT
+	$ SECTION TITLE TEXT
 *------------------------------------*/
-.navigation-text
+.section-title-text
 	font-family 'Oswald'
 	font-size 1.5rem
 	color #585858
 	letter-spacing 0.5px
+
+
+/*------------------------------------*
+	$ NAVIGATION TEXT
+*------------------------------------*/
+.navigation-text
+	font-family 'Oswald'
+	color: #585858;
+	font-family: 'Raleway';
+	font-weight: 600;
+	letter-spacing: 1px;
