--- a/public/stylus/market.styl
+++ b/public/stylus/market.styl
@@ -19,4 +19,5 @@
 @import 'objects/login.styl'
 @import 'objects/category-menu.styl'
 @import 'objects/navigation.styl'
+@import 'objects/section-title.styl'
 	
