--- a/public/stylus/objects/login.styl
+++ b/public/stylus/objects/login.styl
@@ -22,7 +22,7 @@
 *------------------------------------*/
 .login-cover
 	padding 2rem 1rem
-	min-height 500px
+	// min-height 500px
 	display flex
 	.login-box
 		flex 1
