--- a/app/views/partials/slogan.html
+++ b/app/views/partials/slogan.html
@@ -4,6 +4,6 @@
 	<section class="slogan">
 		<span class="slogan-text">Geniales Obras de Arte en Increibles Productos</span>
 		{% if !user %}
-			<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
+			<a href="/auth/signup" class="button-solid js-signUpButton" data-size='large'>Sign Up</a>
 		{% endif %}
 	</section>
