--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -225,11 +225,18 @@ html {
   color: #585858;
   letter-spacing: 0.5px;
 }
-.navigation-text {
+.section-title-text {
   font-family: 'Oswald';
   font-size: 1.5rem;
   color: #585858;
   letter-spacing: 0.5px;
+}
+.navigation-text {
+  font-family: 'Oswald';
+  color: #585858;
+  font-family: 'Raleway';
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 .facebook-button {
   color: #fff;
@@ -434,9 +441,7 @@ html {
 .search-options {
   display: none;
   font-family: 'Raleway';
-  border-left: solid 1px #ddd;
-  border-right: solid 1px #ddd;
-  border-bottom: solid 1px #ddd;
+  border: solid 1px #ddd;
   color: #333;
 }
 .search-options .search-option {
@@ -505,6 +510,7 @@ html {
 }
 .slogan .button-solid {
   margin: 0.5rem;
+  display: inline-block;
 }
 .filters-menu {
   margin: auto;
@@ -1052,7 +1058,6 @@ html {
 }
 .login-cover {
   padding: 2rem 1rem;
-  min-height: 500px;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -1123,15 +1128,16 @@ html {
   cursor: pointer;
 }
 .navigation {
-  padding: 1rem;
   text-align: center;
-  max-width: 1100px;
-  margin: auto;
-}
-.navigation .button-solid {
-  margin: 0.5rem;
+  display: none;
 }
 .category-menu {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
+}
+.section-title {
+  padding: 1rem;
+  text-align: center;
+  max-width: 1100px;
+  margin: auto;
 }
