--- a/public/css/market.css
+++ b/public/css/market.css
@@ -225,11 +225,18 @@ html {
   color: #585858;
   letter-spacing: 0.5px;
 }
-.navigation-text {
+.section-title-text {
   font-family: 'Oswald';
   font-size: 1.5rem;
   color: #585858;
   letter-spacing: 0.5px;
+}
+.navigation-text {
+  font-family: 'Oswald';
+  color: #585858;
+  font-family: 'Raleway';
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 .facebook-button {
   color: #fff;
@@ -434,9 +441,7 @@ html {
 .search-options {
   display: none;
   font-family: 'Raleway';
-  border-left: solid 1px #ddd;
-  border-right: solid 1px #ddd;
-  border-bottom: solid 1px #ddd;
+  border: solid 1px #ddd;
   color: #333;
 }
 .search-options .search-option {
@@ -505,6 +510,7 @@ html {
 }
 .slogan .button-solid {
   margin: 0.5rem;
+  display: inline-block;
 }
 .filters-menu {
   margin: auto;
@@ -700,6 +706,11 @@ html {
 .product {
   border: 1px solid #ddd;
   position: relative;
+  -webkit-transition: box-shadow ease-in-out 125ms;
+  -moz-transition: box-shadow ease-in-out 125ms;
+  -o-transition: box-shadow ease-in-out 125ms;
+  -ms-transition: box-shadow ease-in-out 125ms;
+  transition: box-shadow ease-in-out 125ms;
 }
 .product .product-info {
   border-bottom: 1px dashed #e6e8ec;
@@ -742,6 +753,10 @@ html {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between;
+}
+.product:hover {
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
 .product__featured {
   position: absolute;
@@ -967,7 +982,6 @@ html {
 }
 .login-cover {
   padding: 2rem 1rem;
-  min-height: 500px;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -1042,11 +1056,12 @@ html {
   border-bottom: 1px solid #eee;
 }
 .navigation {
+  text-align: center;
+  display: none;
+}
+.section-title {
   padding: 1rem;
   text-align: center;
   max-width: 1100px;
   margin: auto;
-}
-.navigation .button-solid {
-  margin: 0.5rem;
 }
