--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -85,9 +85,10 @@
 .search-options
 	display none
 	font-family 'Raleway'
-	border-left solid 1px #ddd
-	border-right solid 1px #ddd
-	border-bottom solid 1px #ddd
+	// border-left solid 1px #ddd
+	// border-right solid 1px #ddd
+	// border-bottom solid 1px #ddd
+	border solid 1px #ddd
 	color #333
 	.search-option
 		padding .5rem 1rem
