--- a/public/stylus/objects/navigation.styl
+++ b/public/stylus/objects/navigation.styl
@@ -1,8 +1,3 @@
 .navigation
-	padding 1rem
 	text-align center
-	max-width max-width
-	margin auto
-	.button-solid
-		margin .5rem
-		
+	display none
