--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -23,6 +23,7 @@
 	// box-shadow rgba(0,0,0,0.15) 0 1px 5px
 	border 1px solid #ddd
 	position relative
+	transition box-shadow ease-in-out 125ms
 	.product-info
 		border-bottom: 1px dashed #e6e8ec
 		padding .5em 1em
@@ -42,6 +43,8 @@
 		padding .5em 1em
 		display flex
 		justify-content space-between
+	&:hover
+		box-shadow rgba(0,0,0,0.35) 0 0 10px
 	&__featured
 		position absolute
 		top 0
