--- a/app/views/partials/category-menu.html
+++ b/app/views/partials/category-menu.html
@@ -2,7 +2,7 @@
 		$ CATEGORY MENU
 	********************************************************************* -->
 	<section class="category-menu">
-		<div class="carousel">
+		<div class="carousel-thick-menu">
 			<div class="thick-menu">
 				{% if path == 'works' || path == 'users' %}
 					<a href="#" class="thick-menu__item">Arte Urbano</a>
