--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -61,9 +61,32 @@
 			padding-right 1rem
 		// padding .5rem 1rem
 			
-.carousel
+.carousel-thick-menu
 	height 2rem
 	overflow hidden
 	max-width max-width
 	margin auto
 	padding 0 1rem
+	
+
+/*------------------------------------*
+	$ SQUARE-MENU
+*------------------------------------*/
+.square-menu
+	letter-spacing: 1px;
+	font-family: 'Oswald';
+	color #333
+	white-space nowrap
+	overflow auto
+	&__element
+		display: table-cell;
+	&__item
+		margin .25rem .5rem
+		padding .5rem
+		border solid 1px #ddd
+			
+.carousel-square-menu
+	font-family: 'Oswald';
+	max-width max-width
+	overflow hidden
+	height 3rem
