--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -119,12 +119,33 @@ html {
 .thick-menu__item:not(:last-child) {
   padding-right: 1rem;
 }
-.carousel {
+.carousel-thick-menu {
   height: 2rem;
   overflow: hidden;
   max-width: 1100px;
   margin: auto;
   padding: 0 1rem;
+}
+.square-menu {
+  letter-spacing: 1px;
+  font-family: 'Oswald';
+  color: #333;
+  white-space: nowrap;
+  overflow: auto;
+}
+.square-menu__element {
+  display: table-cell;
+}
+.square-menu__item {
+  margin: 0.25rem 0.5rem;
+  padding: 0.5rem;
+  border: solid 1px #ddd;
+}
+.carousel-square-menu {
+  font-family: 'Oswald';
+  max-width: 1100px;
+  overflow: hidden;
+  height: 3rem;
 }
 .facebook-button {
   color: #fff;
