add user profile

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -116,7 +116,7 @@
 								<span class="button-liner__action folllow">Seguir</span>
 								<span class="button-liner__action following"><i class="fa fa-check"></i> Siguiendo</span>
 								<span class="button-liner__action cancel"><i class="fa fa-times-circle"></i> Cancelar</span>
-								<span class="button-liner__number">13,2k</span>
+								<span class="button-liner__number">{{ artist.followers }}</span>
 							</button>
 						</div>
 
