--- a/app/views/partials/category-menu.html
+++ b/app/views/partials/category-menu.html
@@ -17,7 +17,7 @@
 					<a href="#" class="thick-menu__item">Tecnica Mixta</a>
 					<a href="#" class="thick-menu__item">Grabado</a>
 				{% endif %}
-				{% if path == 'products' || path == 'index' || path == 'login' %}
+				{% if path == 'products' || path == 'index' || path == 'login' || path == 'profile' %}
 					<a href="#" class="thick-menu__item">Obras Originales</a>
 					<a href="#" class="thick-menu__item">Polos</a>
 					<a href="#" class="thick-menu__item">Tazas</a>
