--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -132,20 +132,30 @@ html {
   color: #333;
   white-space: nowrap;
   overflow: auto;
+  font-size: 0.9rem;
+}
+.square-menu::-webkit-scrollbar {
+  display: none;
 }
 .square-menu__element {
   display: table-cell;
 }
 .square-menu__item {
-  margin: 0.25rem 0.5rem;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
   padding: 0.5rem;
   border: solid 1px #ddd;
 }
+.square-menu__element:not(:first-child) .square-menu__item {
+  margin-left: 0.5rem;
+}
+.square-menu__element:not(:last-child) .square-menu__item {
+  margin-right: 0.5rem;
+}
 .carousel-square-menu {
-  font-family: 'Oswald';
-  max-width: 1100px;
   overflow: hidden;
   height: 3rem;
+  padding: 0 1rem;
 }
 .logo {
   padding: 0.5rem 1rem;
