--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -49,7 +49,7 @@
 	white-space nowrap
 	overflow auto
 	&::-webkit-scrollbar
-		display none	
+		display none
 	&__item
 		color #000
 		padding-top .5rem
@@ -78,15 +78,27 @@
 	color #333
 	white-space nowrap
 	overflow auto
+	font-size .9rem
+	&::-webkit-scrollbar
+		display none
 	&__element
-		display: table-cell;
+		display table-cell
 	&__item
-		margin .25rem .5rem
+		margin-top .25rem
+		margin-bottom .25rem
 		padding .5rem
 		border solid 1px #ddd
-			
+
+.square-menu__element:not(:first-child)
+	.square-menu__item
+		margin-left .5rem
+
+.square-menu__element:not(:last-child)
+	.square-menu__item
+		margin-right .5rem
+
+
 .carousel-square-menu
-	font-family: 'Oswald';
-	max-width max-width
 	overflow hidden
 	height 3rem
+	padding 0 1rem
