--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -159,7 +159,6 @@
 	color #585858
 	letter-spacing 0.5px
 
-
 /*------------------------------------*
 	$ NAVIGATION TEXT
 *------------------------------------*/
@@ -169,3 +168,13 @@
 	font-family: 'Raleway';
 	font-weight: 600;
 	letter-spacing: 1px;
+	
+/*------------------------------------*
+	$ PROFILE TEXT
+*------------------------------------*/
+.profile-text
+	font-family 'Oswald'
+	font-size 1.5rem
+	color #585858
+	letter-spacing .5px
+	line-height 1em
