--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -6,18 +6,40 @@
 
 @import 'elements/menus.styl'
 @import 'elements/logos.styl'
-// @import 'elements/texts.styl'
-// @import 'elements/buttons.styl'
+@import 'elements/texts.styl'
+@import 'elements/buttons.styl'
 // @import 'elements/inputs.styl'
 
 @import 'objects/header.styl'
+@import 'objects/category-menu.styl'
 // @import 'objects/slogan.styl'
 // @import 'objects/filters.styl'
 // @import 'objects/products.styl'
 // @import 'objects/more.styl'
 // @import 'objects/footer.styl'
 // @import 'objects/login.styl'
-// @import 'objects/category-menu.styl'
 // @import 'objects/navigation.styl'
 // @import 'objects/section-title.styl'
 	
+
+.profile
+	display flex
+	align-items center
+	max-width max-width
+	margin 1rem auto
+	&__avatar
+		width 5rem
+		margin 0 1rem
+		img
+			border-radius 50%
+	&__info
+		display flex
+		align-items center
+		padding-top .75rem
+	&__city
+		padding-right 1rem
+		
+
+.profile-menu
+	max-width max-width
+	margin auto
