--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -21,7 +21,7 @@
 				<span class="skinny-menu__item__text">Market</span>
 			</a>
 			{% if user %}
-				<a class="skinny-menu__avatar" href="/juliocanares">
+				<a class="skinny-menu__avatar" href="/{{ user.username }}">
 					<div class="button-avatar">
 						<img src="{{ user.photo }}">
 						<!-- jojo -->
