--- a/public/css/index.css
+++ b/public/css/index.css
@@ -127,9 +127,10 @@ html {
   padding: 0 1rem;
 }
 .square-menu {
-  letter-spacing: 1px;
+  letter-spacing: 1.5px;
   font-family: 'Oswald';
-  color: #333;
+  line-height: 0.8em;
+  color: #585858;
   white-space: nowrap;
   overflow: auto;
   font-size: 0.9rem;
@@ -143,8 +144,9 @@ html {
 .square-menu__item {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-  padding: 0.5rem;
+  padding: 0.75rem;
   border: solid 1px #ddd;
+  background: #fff;
 }
 .square-menu__element:not(:first-child) .square-menu__item {
   margin-left: 0.5rem;
@@ -156,6 +158,8 @@ html {
   overflow: hidden;
   height: 3rem;
   padding: 0 1rem;
+  max-width: 1100px;
+  margin: auto;
 }
 .facebook-button {
   color: #fff;
