--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -127,9 +127,10 @@ html {
   padding: 0 1rem;
 }
 .square-menu {
-  letter-spacing: 1px;
+  letter-spacing: 1.5px;
   font-family: 'Oswald';
-  color: #333;
+  line-height: 0.8em;
+  color: #585858;
   white-space: nowrap;
   overflow: auto;
   font-size: 0.9rem;
@@ -143,8 +144,9 @@ html {
 .square-menu__item {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-  padding: 0.5rem;
+  padding: 0.75rem;
   border: solid 1px #ddd;
+  background: #fff;
 }
 .square-menu__element:not(:first-child) .square-menu__item {
   margin-left: 0.5rem;
@@ -156,6 +158,8 @@ html {
   overflow: hidden;
   height: 3rem;
   padding: 0 1rem;
+  max-width: 1100px;
+  margin: auto;
 }
 .logo {
   padding: 0.5rem 1rem;
@@ -181,6 +185,263 @@ html {
     max-width: 13.5rem;
   }
 }
+.separator-text {
+  text-transform: uppercase;
+  color: #aaa;
+  font-family: 'Oswald';
+  font-size: 0.8em;
+  letter-spacing: 1.5px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.separator-text .line {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 1px;
+  background: #eee;
+}
+.separator-text .text {
+  padding: 0 1em;
+}
+.high-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  line-height: 1.25;
+}
+.high-text[data-size='small'] {
+  font-size: 0.9rem;
+}
+.high-text[data-color='light'] {
+  color: #aaa;
+}
+.skinny-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+  font-family: 'Roboto Condensed';
+}
+.skinny-text[data-color='light'] {
+  color: #aaa;
+}
+.skinny-text[data-size='small'] {
+  font-size: 0.85rem;
+}
+.high-text[data-color='white'] {
+  color: #fff;
+}
+.medium-text {
+  color: #585858;
+  font-weight: 600;
+  font-size: 0.85rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  text-transform: uppercase;
+}
+.slogan-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+}
+.section-title-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+}
+.navigation-text {
+  font-family: 'Oswald';
+  color: #585858;
+  font-family: 'Raleway';
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.profile-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+  line-height: 1em;
+}
+.facebook-button {
+  color: #fff;
+  display: table-cell;
+  padding: 0.75rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  background: -webkit-linear-gradient(#4e69a2, #3b5998);
+  background: -moz-linear-gradient(#4e69a2, #3b5998);
+  background: -o-linear-gradient(#4e69a2, #3b5998);
+  background: -ms-linear-gradient(#4e69a2, #3b5998);
+  background: linear-gradient(#4e69a2, #3b5998);
+}
+.facebook-button i {
+  font-size: 1.25em;
+}
+.facebook-button[data-expand='true'] {
+  display: block;
+  text-align: center;
+}
+.button-solid {
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  background: #3000ff;
+  display: table-cell;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-solid[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-solid[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-solid[data-color='red'] {
+  background: #f54545;
+}
+.button-solid[data-expand='true'] {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.button-link {
+  color: #3000ff;
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+.button-liner {
+  color: #000;
+  cursor: pointer;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  display: table-cell;
+  border: 1px solid #bbb;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-liner__action {
+  padding: 0.5em;
+  display: table-cell;
+}
+.button-liner__action.following,
+.button-liner__action.cancel {
+  display: none;
+}
+.button-liner__number {
+  padding: 0.5em;
+  display: table-cell;
+  border-left: 1px solid #bbb;
+}
+.button-liner[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-liner[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-liner.disabled {
+  color: #aaa;
+  border-color: #ccc;
+}
+.button-liner.disabled .button-liner__number {
+  border-color: #bbb;
+}
+.button-liner.disabled .button-liner__action.folllow {
+  display: none;
+}
+.button-liner.disabled .button-liner__action.following {
+  display: table-cell;
+}
+.button-liner.disabled:hover .button-liner__action.following {
+  display: none;
+}
+.button-liner.disabled:hover .button-liner__action.cancel {
+  display: table-cell;
+}
+.button-like,
+.button-wish-list {
+  color: #444;
+  font-weight: 100;
+  font-size: 0.85em;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+}
+.button-like.active,
+.button-wish-list.active {
+  color: #ccc;
+}
+.button-featured {
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.button-featured__inner {
+  color: #fff;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  font-size: 0.7rem;
+  background: #ff6e40;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px;
+  padding: 0.75em 0.25em 0.5em 0.25em;
+}
+.button-featured.admin {
+  cursor: pointer;
+}
+.button-featured.disabled .button-featured__inner {
+  background: #aaa;
+}
+.button-avatar {
+  max-width: 2.5rem;
+}
+.button-avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
 .header {
   display: -webkit-box;
   display: -moz-box;
@@ -202,4 +463,63 @@ html {
   align-items: center;
   max-width: 1100px;
   margin: 0.5rem auto;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+/*------------------------------------*
+	$ PROFILE
+*------------------------------------*/
+.profile-container {
+  background: #f6f6f6;
+}
+.profile {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: auto;
+  padding: 1.5rem 0;
+}
+.profile__avatar {
+  width: 5rem;
+  margin: 0 1rem;
+}
+.profile__avatar img {
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.profile__info {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding-top: 0.75rem;
+}
+.profile__city {
+  padding-right: 1rem;
+}
+/*------------------------------------*
+	$ PROFILE MENU
+*------------------------------------*/
+.profile-menu {
+  background: #f6f6f6;
 }
