--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -20,13 +20,21 @@
 // @import 'objects/login.styl'
 // @import 'objects/navigation.styl'
 // @import 'objects/section-title.styl'
-	
 
+
+/*------------------------------------*
+	$ PROFILE
+*------------------------------------*/
+.profile-container
+	background #f6f6f6
+	
+	
 .profile
 	display flex
 	align-items center
 	max-width max-width
-	margin 1rem auto
+	margin auto
+	padding 1.5rem 0
 	&__avatar
 		width 5rem
 		margin 0 1rem
@@ -38,8 +46,10 @@
 		padding-top .75rem
 	&__city
 		padding-right 1rem
-		
 
+
+/*------------------------------------*
+	$ PROFILE MENU
+*------------------------------------*/
 .profile-menu
-	max-width max-width
-	margin auto
+	background #f6f6f6
