antes de pulear

--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -12,7 +12,7 @@
 
 @import 'objects/header.styl'
 @import 'objects/category-menu.styl'
-// @import 'objects/slogan.styl'
+@import 'objects/works.styl'
 // @import 'objects/filters.styl'
 // @import 'objects/products.styl'
 // @import 'objects/more.styl'
