--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -45,7 +45,7 @@
 				<div class="square-menu__element">
 					<div class="square-menu__item">Portafolio <!-- <span class="number">{{data[0].portfolio}}</span> --></div>
 				</div>
-				<div class="square-menu__element">
+				<div class="square-menu__element" style="display: none;">
 					<div class="square-menu__item">Tienda <!-- <span class="number">{{data[2].store}}</span> --></div>
 				</div>
 				<div class="square-menu__element">
