--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -468,6 +468,88 @@ html {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
 }
+.works {
+  padding: 0 0.5rem;
+  overflow: hidden;
+  max-width: 1100px;
+  margin: auto;
+}
+.works .work {
+  display: block;
+  margin: 1rem 0.5rem;
+  border: 1px solid #eee;
+  -webkit-transition: box-shadow ease-in-out 125ms;
+  -moz-transition: box-shadow ease-in-out 125ms;
+  -o-transition: box-shadow ease-in-out 125ms;
+  -ms-transition: box-shadow ease-in-out 125ms;
+  transition: box-shadow ease-in-out 125ms;
+  position: relative;
+}
+.works .work:hover {
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+}
+.works .work__featured {
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(-12.5%, -37.5%);
+  -moz-transform: translate(-12.5%, -37.5%);
+  -o-transform: translate(-12.5%, -37.5%);
+  -ms-transform: translate(-12.5%, -37.5%);
+  transform: translate(-12.5%, -37.5%);
+}
+@media screen and (min-width: 151px) and (max-width: 300px) {
+  .works[data-columns]::before {
+    content: '1 .column.size-1of1';
+  }
+}
+@media screen and (min-width: 301px) and (max-width: 450px) {
+  .works[data-columns]::before {
+    content: '2 .column.size-1of2';
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 600px) {
+  .works[data-columns]::before {
+    content: '3 .column.size-1of3';
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 750px) {
+  .works[data-columns]::before {
+    content: '4 .column.size-1of4';
+  }
+}
+@media screen and (min-width: 751px) and (max-width: 900px) {
+  .works[data-columns]::before {
+    content: '5 .column.size-1of5';
+  }
+}
+@media screen and (min-width: 901px) {
+  .works[data-columns]::before {
+    content: '6 .column.size-1of6';
+  }
+}
+.column {
+  float: left;
+}
+.size-1of1 {
+  width: 100%;
+}
+.size-1of2 {
+  width: 50%;
+}
+.size-1of3 {
+  width: 33.333333333333336%;
+}
+.size-1of4 {
+  width: 25%;
+}
+.size-1of5 {
+  width: 20%;
+}
+.size-1of6 {
+  width: 16.666666666666668%;
+}
 /*------------------------------------*
 	$ PROFILE
 *------------------------------------*/
