--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -13,7 +13,7 @@
 				<div class="footer__section copyright">
 					<p class="skinny-text" data-size='small' data-color='light'>COPYRIGHT © 2015 - ALL RIGHTS RESERVED.</p>
 				</div>
-				<div class="footer__section links">
+<!-- 				<div class="footer__section links">
 					<p class="medium-text">Blog</p>
 					<p class="medium-text">Terminos</p>
 					<p class="medium-text">Condiciones</p>
@@ -22,7 +22,7 @@
 					<i class="fa fa-facebook"></i>
 					<i class="fa fa-twitter"></i>
 					<i class="fa fa-google-plus"></i>
-				</div>			
+				</div>	 -->		
 			</div>
 		</footer>
 	</div>
