--- a/public/stylus/objects/works.styl
+++ b/public/stylus/objects/works.styl
@@ -27,6 +27,12 @@ work-width = 150px
 			top 0
 			right 0
 			transform translate(-12.5%, -37.5%)
+		&__like
+			position absolute
+			top 0
+			left 0
+			transform translate(50%, -35%)
+			
 
 for i in (1..(columns - 1))
 	@media screen and (min-width: work-width*i+1) and (max-width: work-width*(i+1))
