--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -13,10 +13,10 @@
 @import 'objects/header.styl'
 @import 'objects/category-menu.styl'
 @import 'objects/works.styl'
+@import 'objects/footer.styl'
 // @import 'objects/filters.styl'
 // @import 'objects/products.styl'
 // @import 'objects/more.styl'
-// @import 'objects/footer.styl'
 // @import 'objects/login.styl'
 // @import 'objects/navigation.styl'
 // @import 'objects/section-title.styl'
