--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -75,6 +75,8 @@
 		</div>
 	</div>
 
+	{% include '../partials/footer.html' %}
+
 	<script type="text/template" id="work-template">
 
 		<article class="work">
