--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -400,6 +400,14 @@ html {
 .button-wish-list.active {
   color: #ccc;
 }
+.button-liked {
+  color: rgba(170,170,170,0.5);
+  font-size: 1.25rem;
+  background: transparent;
+}
+.button-liked.hidden {
+  display: none;
+}
 .button-featured {
   padding: 0.5rem;
   display: -webkit-box;
@@ -433,7 +441,7 @@ html {
   cursor: pointer;
 }
 .button-featured.disabled .button-featured__inner {
-  background: #aaa;
+  background: rgba(170,170,170,0.5);
 }
 .button-avatar {
   max-width: 2.5rem;
@@ -499,6 +507,16 @@ html {
   -ms-transform: translate(-12.5%, -37.5%);
   transform: translate(-12.5%, -37.5%);
 }
+.works .work__like {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform: translate(50%, -35%);
+  -moz-transform: translate(50%, -35%);
+  -o-transform: translate(50%, -35%);
+  -ms-transform: translate(50%, -35%);
+  transform: translate(50%, -35%);
+}
 @media screen and (min-width: 151px) and (max-width: 300px) {
   .works[data-columns]::before {
     content: '1 .column.size-1of1';
@@ -549,6 +567,90 @@ html {
 }
 .size-1of6 {
   width: 16.666666666666668%;
+}
+.footer-container {
+  background: #181818;
+}
+.footer {
+  max-width: 1100px;
+  margin: auto;
+  color: #fff;
+  text-align: center;
+  padding: 1.5rem 0;
+}
+.footer__logo {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 1rem 0;
+}
+.footer__section {
+  padding: 0.25rem 0;
+}
+.footer__section.links {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.footer__section.links p {
+  padding: 0.5rem;
+}
+.footer__section.copyright {
+  padding: 0 1rem;
+}
+.footer__section.social i {
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  font-size: 1.15rem;
+}
+@media (min-width: 920px) {
+  .footer__sections {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .footer__section {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+  .footer__section.copyright {
+    text-align: left;
+  }
+  .footer__section.social {
+    text-align: right;
+  }
 }
 /*------------------------------------*
 	$ PROFILE
